<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_centers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_centers" />
        <item
            android:id="@+id/nav_alldata"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_alldata" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_messages" />
        <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings" />


    </group>
</menu>