<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahmed.ahmed.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_centers"
        android:name="com.ahmed.ahmed.ui.Centers.CentersFragment"
        android:label="@string/menu_centers"
        tools:layout="@layout/fragment_centers" />

    <fragment
        android:id="@+id/nav_alldata"
        android:name="com.ahmed.ahmed.ui.AllData.AllDataFragment"
        android:label="@string/menu_alldata"
        tools:layout="@layout/fragment_alldata" />
    <fragment
        android:id="@+id/nav_messages"
        android:name="com.ahmed.ahmed.ui.Messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ahmed.ahmed.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>